--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "moment": "^2.27.0",
     "next": "^9.5.3",
     "react": "^16.13.1",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
