--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "clipboard": "^2.0.6",
     "next": "^10.0.3",
     "react": "^16.13.1",
     "react-datetime": "^2.16.3",
